Add TypeCapture.any(). Make tests public. Add tests to AggregatesTests. Rename exceptions package.